fix(core): `PrimitiveTextfield` drop wrong `text-overflow: ellipsis` (horizontal scroll bug)

--- a/projects/core/components/primitive-textfield/textfield/textfield.style.less
+++ b/projects/core/components/primitive-textfield/textfield/textfield.style.less
@@ -48,11 +48,6 @@
     :host-context(tui-text-area._focused:not(._readonly))::placeholder {
         opacity: 1;
     }
-
-    &::placeholder,
-    &:placeholder-shown {
-        .text-overflow();
-    }
 }
 
 textarea:host {
